# apps-sdk-submission-lint

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: invalid-app.json  valid-app.json
launch/: launch-copy.md
src/apps_sdk_submission_lint/: __init__.py  cli.py  manifest.py  rules.py
tests/: test_lint.py
