[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apps-sdk-submission-lint"
version = "0.1.0"
description = "Offline lint checks for OpenAI Apps SDK submission metadata."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "metaimagine" }]
keywords = ["openai", "apps-sdk", "lint", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
apps-sdk-submission-lint = "apps_sdk_submission_lint.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/apps_sdk_submission_lint"]
